syntax = "proto3";

package settings.profile.confirmation;

enum Error {
    INVALID_CREDENTIALS = 0;
    INCORRECT_PASSWORD = 1;
    TOO_MANY_REQUESTS = 2;
    INVALID_PASSWORD = 3;
    SERVER_ERROR = 4;
}

message Success {
}

message Response {
    oneof response_field {
        Error error = 1;
        Success success = 2;
    }
}

message Request {
    string password = 1;
}

