syntax = "proto3";

package settings.profile.username.response;

enum Error {
    INVALID_CREDENTIALS = 0;
    REGISTERED_USERNAME = 1;
    TOO_MANY_REQUESTS = 2;
    INVALID_USERNAME = 3;
    SERVER_ERROR = 4;
}

message Response {
    oneof response_field {
        Error error = 1;
        string token = 2;
    }
}
